fix publication align

--- a/media/css/DasStyle.css
+++ b/media/css/DasStyle.css
@@ -135,6 +135,11 @@ a:active {
 	font-weight: normal;
 	color: #00817D;
 }
+.teal2 {
+	font-family: Gill Sans, Arial, Helvetica, sans-serif;
+	font-size: 20px;
+	color: #00817D;
+}
 .DASpub {
 	height: 7250px;
 	width: 975px;
